fix light mode ad text contrast

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -57,6 +57,10 @@
   --carbon-text-color: var(--md-typeset-color) !important;
 }
 
+[data-md-color-scheme="default"] .carbon-text {
+  color: var(--md-code-fg-color) !important;
+}
+
 .md-typeset__table {
   width: 100%;
 }
